# actividadCalidad

./: .gitignore  INFORME_VICIOS.md  Instrucciones.md  README.md  sonar-project.properties
.scannerwork/: report-task.txt
Back/: README.md  TicketPremium_FIFA2026_Agente.md  docker-compose.yml  pom.xml
Back/banco-service/: Dockerfile  pom.xml
Back/banco-service/src/main/resources/: application.properties  data.sql
Back/db-init/: init-databases.sh
Back/federacion-service/: Dockerfile  pom.xml
Back/federacion-service/src/main/resources/: application.properties  data.sql
Back/shared-soap-models/: pom.xml
Back/ticketpremium-web/: Dockerfile  index.html  nginx.conf
Back/ticketpremium-web/css/: style.css
Back/ticketpremium-web/js/: app.js  soap-client.js
Frontend/: .gitignore  .npmrc  generate-icons.js  package.json  pnpm-lock.yaml  request.xml  tailwind.config.js  tsconfig.base.json
Frontend/apps/desktop/: generate-icons.js  package.json
Frontend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/apps/desktop/src-tauri/capabilities/: default.json
Frontend/apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Frontend/apps/web/src/: App.tsx  index.css
Frontend/apps/web/src/components/: Footer.tsx  MatchCard.tsx  Navbar.tsx  SeatGrid.tsx  StadiumSelector3D.tsx  StadiumSelectorSVG.tsx
Frontend/apps/web/src/context/: ToastContext.tsx
QA/: PITCH_EJECUTIVO.md  QA_REPORT.md  README.md
QA/ISSUES/: ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md
(+37 files in other folders)
