[package]
name = "ticketpremium-fifa2026"
version = "1.0.0"
description = "TicketPremium FIFA 2026 Desktop App"
authors = ["TicketPremium"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "ticketpremium-fifa2026"
path = "src/main.rs"

[lib]
name = "app_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
